A lot more frontend work. More questions.

--- a/client/index.html
+++ b/client/index.html
@@ -6,11 +6,10 @@
     <title>app</title>
   </head>
   <body>
+  <link rel="stylesheet"
+        href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script type="text/javascript">
-      fetch('/api').then(res => res.text())
-      .then(text => console.log('text', text))
-    </script>
   </body>
 </html>
