Added tweet button so I can get millions of shares.

--- a/client/index.html
+++ b/client/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>WAT programming quiz</title>
-  </head>
-  <body>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>WAT programming quiz</title>
+</head>
+<body>
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+<!-- Widgets.js gives popups for tweet button. MUST-HAVE. -->
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<div id="app"></div>
+<!-- built files will be auto injected -->
 
-  <link rel="stylesheet"
-        href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
-  </body>
+<link rel="stylesheet"
+      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
+</body>
 
 </html>
